# aoc2019

./: Cargo.toml  build_docker.sh  run.sh  shell.sh
docker/: Dockerfile
src/1/: 1  1.rs
src/2/: 2  2.rs
src/3/: 3  3.rs
