[package]

name = "Adventofcode"
version = "0.0.1"
authors = [ "Hampus Linander <hampus.linander@gmail.com>" ]
edition = "2018"

[dependencies]
imageproc = "0.19.2"
image = "0.22.3"

[[bin]]
name = "1"
path = "src/1/1.rs"

[[bin]]
name = "2"
path = "src/2/2.rs"

[[bin]]
name = "3"
path = "src/3/3.rs"